# HeiTwin-Exact

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: HeiTwin.cc  utils.cc  utils.hh
src/config/: config.cc  config.hh  configurations.hh
src/data_structures/: contraction_enumeration.hh  graph.cc  graph.hh
src/solvers/: branch_and_bound.hh  cycle_detection.hh  greedy_red_deg_limit.hh  greedylth.hh  heuristic.hh  ordered.hh  random.hh  tree_contract.hh
src/strategies/: local_search.cc
